# StoryTeller

./: .gitignore  .kilocodemodes  AUTO-COMMIT-README.md  Reqiurement.txt  auto-commit.ps1  package.json  playwright.config.ts  start-auto-commit.bat  vite.config.js
.claude/: settings.local.json
_bmad-output/: IMPLEMENTATION-READINESS-FIXES-2025-12-24.md  PROJECT-INDEX.md  api-contracts.md  architecture.md  bmm-workflow-status.yaml  component-inventory.md  deployment-guide.md  development-guide.md  epics-continuation.md  epics-final.txt  epics.md  implementation-readiness-report-2025-12-24.md  prd.md  project-overview.md  source-tree-analysis.md  storyteller-presentation-final.excalidraw  storyteller-presentation-professional.excalidraw  storyteller-presentation.excalidraw  test-design-system.md  ux-design-specification.md  ux-design-step7-content.md  ux-steps-8-14.md
_bmad-output/analysis/: brainstorming-session-2025-12-17.md  product-brief-StoryTeller-2025-12-18.md
playwright-report/: index.html
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: V1__init_schema.sql  V2__create_projects_schema.sql
src-tauri/src/: lib.rs
src-tauri/src/commands/: api_provider.rs  keychain.rs  projects.rs
src-tauri/src/db/: commands.rs  connection.rs  error.rs  migrations.rs  mod.rs  projects.rs
src-tauri/src/db/commands/: database_commands.rs  mod.rs  project_commands.rs
src-tauri/src/db/models/: project.rs
storyteller/: .gitignore  package.json  playwright.config.ts  vite.config.js
test-results/: .last-run.json
(+912 files in other folders)
